--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>jeremygunawan Personal Website</title>
+	</head>
+	<body>
+
+	</body>
+</html>
