--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<script>
 			$( document ).ready(function() {
 				$('.basic.modal')
-				  .modal('show')
+				  .modal('show');
 			});
 		</script>
 
