--- a/index.html
+++ b/index.html
@@ -1,39 +1,147 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+
 <html>
 	<head>
-		<title>jeremygunawan Personal Website</title>
-
-		<script type="text/javascript" src="assets/js/main.js"></script>
-		<script type="text/javascript" src="assets/js/jquery-1.11.2.min.js"></script>	
-
-		<!--Semantic-->
-		<script type="text/javascript" src="assets/lib/dist/semantic.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="assets/lib/dist/semantic.min.css"></link>
-
-		<script>
-			$( document ).ready(function() {
-				$('.basic.modal')
-				  .modal('show');
-			});
-		</script>
-
-
+		<title>JeremyGunawan</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
 	</head>
 	<body>
 
-		<div class="ui basic modal">
-		  <div class="header">
-		    Information
-		  </div>
-		  <div class="content">
-		    <div class="image">
-		      <i class="configure icon"></i>
-		    </div>
-		    <div class="description">
-		      <p>This Website is under construction</p>
-		      <p>More information : <i class="mail icon"></i> b1g_j4ck@yahoo.com </p>
-		    </div>
-		  </div>
-		</div>
+		<!-- Wrapper-->
+			<div id="wrapper">
+
+				<!-- Nav -->
+					<nav id="nav">
+						<a href="#me" class="icon fa-home active"><span>Home</span></a>
+						<a href="#profile" class="icon fa-user"><span>Profile</span></a>
+						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
+						<!-- <a href="http://www.webtagram.net/user/jeremygunawan/877581438" class="icon fa-instagram" target="_blank"><span>Instagram</span></a> -->
+						<a href="https://www.facebook.com/jeremy.gunawan.52" class="icon fa-facebook" target="_blank"><span>Facebook</span></a>
+					</nav>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- Me -->
+							<article id="me" class="panel">
+								<header>
+									<h1>Jeremy Gunawan</h1>
+									<p>Junior Program Developer</p>
+								</header>
+								<a href="#profile" class="jumplink pic">
+									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
+									<img src="images/me.jpg" alt="" />
+								</a>
+							</article>
+
+						<!-- Profile -->
+							<article id="profile" class="panel">
+								<header>
+									<h1>My Profile</h1>
+								</header>
+								<header>
+									<h2>School</h2>
+								</header>
+								<p>
+									I'm now 3rd years student at <a href="http://ithb.ac.id/">Institut Teknologi Harapan Bangsa (ITHB)</a>.
+								</p>
+								<header>
+									<h2>Work</h2>
+								</header>
+								<p>
+									For now my work just make a school assignment, and help my friend on their project. that's it.
+								</p>
+								<header>
+									<h2>Programming Skill</h2>
+								</header>
+								<p>
+									Until now, I have tried some program language, framework, and another supporting program. Maybe just a basic programming, but I still learn to make it better. 
+								</p>
+								<section>
+									<div class="row">
+										<div class="4u 12u$(mobile)">
+											<a href="http://www.cplusplus.com/" class="image fit fade" target="_blank"><img src="images/c++.png" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="https://www.java.com/en/" class="image fit fade" target="_blank"><img src="images/java.png" alt=""></a>
+										</div>
+										<div class="4u$ 12u$(mobile)">
+											<a href="http://www.w3schools.com/html/html5_intro.asp" class="image fit fade" target="_blank"><img src="images/html5.png" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="http://www.w3schools.com/css/css3_intro.asp" class="image fit fade" target="_blank"><img src="images/css3.png" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="http://www.oracle.com/technetwork/database/database10g/overview/index-095623.html" class="image fit fade" target="_blank"><img src="images/oracle10g.jpg" alt=""></a>
+										</div>
+										<div class="4u$ 12u$(mobile)">
+											<a href="https://www.mysql.com/" class="image fit fade" target="_blank"><img src="images/mysql.jpg" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="https://secure.php.net/" class="image fit fade" target="_blank"><img src="images/php.png" alt=""></a>
+										</div>
+										<div class="4u 12u$(mobile)">
+											<a href="http://laravel.com/docs/4.2" class="image fit fade" target="_blank"><img src="images/laravel.jpg" alt=""></a>
+										</div>
+										<div class="4u$ 12u$(mobile)">
+											<a href="http://www.codeigniter.com/" class="image fit fade" target="_blank"><img src="images/codeigniter.png" alt=""></a>
+										</div>
+									</div>
+								</section>
+							</article>
+
+						<!-- Contact -->
+							<article id="contact" class="panel">
+								<header>
+									<h2>Contact Me</h2>
+								</header>
+								<form action="MAILTO:b1g_j4ck@yahoo.com" method="post" enctype="text/plain">
+									<div>
+										<div class="row">
+											<div class="6u 12u$(mobile)">
+												<input type="text" name="name" placeholder="Name" />
+											</div>
+											<div class="6u$ 12u$(mobile)">
+												<input type="text" name="mail" placeholder="Email" />
+											</div>
+											<!-- <div class="12u$">
+												<input type="text" name="subject" placeholder="Subject" />
+											</div> -->
+											<div class="12u$">
+												<textarea name="comment" placeholder="Message" rows="8"></textarea>
+											</div>
+											<div class="12u$">
+												<input type="submit" value="Send Message" />
+											</div>
+										</div>
+									</div>
+								</form>
+							</article>
+
+					</div>
+
+				<!-- Footer -->
+					<div id="footer">
+						<ul class="copyright">
+							<li>Copyright &copy; 2015. Jeremy Gunawan.</li>
+							<li>Credit To html5up.net | @n33co</li>	 
+						</ul>
+					</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/skel-viewport.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
 	</body>
 </html>
