--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								</header>
 								<a href="#profile" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/me.JPG" alt="" />
 								</a>
 							</article>
 
@@ -77,7 +77,7 @@
 											<a href="http://www.w3schools.com/css/css3_intro.asp" class="image fit fade" target="_blank"><img src="images/css3.png" alt=""></a>
 										</div>
 										<div class="4u 12u$(mobile)">
-											<a href="http://www.oracle.com/technetwork/database/database10g/overview/index-095623.html" class="image fit fade" target="_blank"><img src="images/oracle10g.jpg" alt=""></a>
+											<a href="http://www.oracle.com/technetwork/database/database10g/overview/index-095623.html" class="image fit fade" target="_blank"><img src="images/Oracle10g.jpg" alt=""></a>
 										</div>
 										<div class="4u$ 12u$(mobile)">
 											<a href="https://www.mysql.com/" class="image fit fade" target="_blank"><img src="images/mysql.jpg" alt=""></a>
